--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="shortcut icon" href="img/Vector.svg" type="image/x-icon">
-    <title>Portfolio</title>
+    <title>Decodificador</title>
 </head>
 <body>
     <header class="cabecalho">
